Fix button visibility on smaller screens
Adjusted CSS for the Auditory page to ensure the "Reserve" button is visible without scrolling on screens 1024px and below. This involved modifying the `.buttonContainer` and `.box` styles, as well as updating media queries to accommodate smaller viewports.

--- a/src/pages/Spaces/Auditory/auditory.module.css
+++ b/src/pages/Spaces/Auditory/auditory.module.css
@@ -56,7 +56,8 @@
 .buttonContainer {
   display: flex;
   justify-content: center;
-  margin-top: -400px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .auditory1 img {
@@ -96,8 +97,7 @@
   position: absolute;
   width: 600px;
   height: auto;
-  min-height: 565px;
-  max-height: 550px;
+  max-height: 85vh;
   overflow-y: auto;
   top: calc(50% - 10px);
   left: 50%;
@@ -121,7 +121,7 @@
     width: 90%;
     max-width: 600px;
     height: auto;
-    min-height: 600px;
+    max-height: 85vh;
     top: calc(50% + 65px);
     transform: translate(calc(-50% - 100px), -50%);
   }
@@ -135,14 +135,32 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .box {
+    width: 90%;
+    max-width: 550px;
+    height: auto;
+    max-height: 80vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .textContent {
+    font-size: 13px;
+    line-height: 18px;
+  }
+}
+
 @media (max-width: 800px) {
   .box {
     width: 95%;
     max-width: 500px;
     height: auto;
-    min-height: 550px;
-    top: calc(50% + 65px);
-    transform: translate(calc(-50% - 50px), -50%);
+    max-height: 75vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .box ul {
@@ -159,8 +177,9 @@
     width: 95%;
     max-width: 350px;
     height: auto;
-    min-height: 500px;
-    top: calc(50% + 65px);
+    max-height: 70vh;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
   }
 
